# furcate-pi-minima

./: .gitignore  Cargo.toml  NOTICE  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
docs/: furcate-pi-minima-design.md  minima-reference.md
src/: config.rs  error.rs  jar.rs  lib.rs  ops.rs  profile.rs  rpc.rs  secrets.rs  systemd.rs
